--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  font-family: "NT Somic", Arial, Helvetica, sans-serif;
   font-weight: 400;
 }
 
