--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,5 @@
 body
   width: 1100px
   margin: 0 auto
-  font-family: 'Raleway', Arial, Helvetica, sans-serif
+  font-family: 'NT Somic', Arial, Helvetica, sans-serif
   font-weight: 400
-  
