--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,8 @@ h6 {
 .hero__container,
 .brands__list,
 .suggestions__container,
-.sets__container,
-.utp__container,
+.sets,
+.utp,
 .footer__navigation,
 .footer__credentials {
   max-width: 135rem;
@@ -184,22 +184,37 @@ h6 {
   background-image: url("../images/icons/cart.svg");
 }
 
+.banner {
+  position: relative;
+  height: 45rem;
+  width: 100%;
+}
+
+.banner__container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  transform: translate3d(0, 0, 0);
+  transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
+  box-sizing: content-box;
+}
+
 .banner__container__item {
   display: block;
   height: 45rem;
   width: 100% !important;
   background-size: cover !important;
   background-repeat: no-repeat !important;
-  background-position-x: 50%;
-}
-
-.swiper {
-  height: 45rem;
-  width: 100%;
-}
-
-.swiper-slide {
   background-position-x: 50% !important;
+  flex-shrink: 0;
+  position: relative;
+  transition-property: transform;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .banner__nav_buttons {
@@ -297,12 +312,12 @@ h6 {
   background-color: #FF197A;
 }
 
-.banner-main {
-  position: relative;
+.categories {
+  padding: 6rem 0;
 }
 
 .categories__tiles {
-  margin: 6rem auto;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
@@ -336,6 +351,196 @@ h6 {
   font-weight: 500;
   line-height: 2.5rem;
   text-align: center;
+}
+
+.hero {
+  padding-bottom: 6rem;
+}
+
+.brands {
+  margin: 0 auto;
+  padding: 6rem 0;
+  width: 100%;
+  max-width: 135rem;
+}
+
+.brands__list {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 2rem;
+}
+
+.brands__list__item {
+  margin: 0;
+  height: 9rem;
+  width: auto;
+}
+
+.suggestions {
+  margin-bottom: 6rem;
+}
+
+.suggestions__container__heading {
+  display: block;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 2.6rem;
+}
+
+.suggestions__container__list {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.sets {
+  margin-bottom: 6rem;
+}
+
+.sets__heading {
+  display: block;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 2.6rem;
+}
+
+.sets__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  border-radius: 0.4rem;
+}
+
+.sets__container__item {
+  display: block;
+  position: relative;
+  background-color: #ECECEC;
+  border-radius: 0.4rem;
+}
+
+.sets__container__item__title {
+  position: absolute;
+  display: block;
+  padding: 3rem;
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 4.4rem;
+  color: #FAFAFA;
+}
+
+.sets__container__item__image {
+  display: block;
+}
+
+.utp {
+  margin-bottom: 6rem;
+}
+
+.utp__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+.utp__container__tile {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  text-align: center;
+  background-color: #F5F5F5;
+  border-radius: 0.4rem;
+}
+
+.utp__container__tile__image {
+  display: block;
+  width: 14.6rem;
+  height: 14.6rem;
+  align-self: center;
+}
+
+.utp__container__tile__heading {
+  display: block;
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 2.6rem;
+}
+
+.utp__container__tile__text {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 2.1rem;
+}
+
+.footer {
+  background-color: #0A0A0A;
+  padding: 4.8rem;
+}
+
+.footer__navigation {
+  margin-bottom: 10rem;
+  display: flex;
+  justify-content: space-between;
+  color: #FAFAFA;
+  text-transform: uppercase;
+}
+
+.footer__navigation__heading {
+  display: block;
+  margin-bottom: 2rem;
+  opacity: 1;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2.1rem;
+}
+
+.footer__navigation__menu {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 2rem;
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+
+.footer__navigation__catalogue__menu {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 7rem;
+}
+
+.footer__navigation__menu__link {
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+}
+
+.footer__credentials {
+  display: flex;
+  justify-content: space-between;
+  color: #FAFAFA;
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+
+.flex-left {
+  align-self: left;
+}
+
+.flex-center {
+  align-self: center;
+}
+
+.flex-right {
+  align-self: right;
 }
 
 /*# sourceMappingURL=style.css.map */
