--- a/sass/style.sass
+++ b/sass/style.sass
@@ -71,7 +71,7 @@ h6
 .banner__container__item__content,
 .categories__tiles,
 .hero__container,
-.brands__list,
+// .brands__list,
 .suggestions__container,
 .sets,
 .utp,
@@ -336,6 +336,13 @@ h6
   padding: 6rem 0
   width: 100%
   max-width: 135rem
+  overflow-x: auto
+  -ms-overflow-style: none
+  scrollbar-width: none
+
+  &::-webkit-scrollbar
+      width: 0
+      height: 0
 
 .brands__list
   display: flex
@@ -348,6 +355,11 @@ h6
   margin: 0
   height: 9rem
   width: auto
+
+.brands__list__item__image
+  height: 9rem
+  width: auto
+  max-width: unset
 
 .suggestions
   margin-bottom: 6rem
