--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   font-size: 1.6rem;
   line-height: 1.6rem;
   color: #0A0A0A;
+  background-color: #FAFAFA;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -89,6 +90,13 @@ h6 {
 .header__services__list__item__link {
   color: #F5F5F5;
 }
+.header__top__container__menu__item__link:hover,
+.header__top__container__getintouch__item__city:hover,
+.header__top__container__getintouch__item__phone:hover,
+.header__top__container__getintouch__item__account:hover,
+.header__services__list__item__link:hover {
+  color: #FF197A;
+}
 
 .header__top__menu__item__link,
 .header__top__getintouch__item__city,
@@ -111,6 +119,9 @@ h6 {
   background-position: left center;
   background-repeat: no-repeat;
   background-size: 1.6rem 1.6rem;
+}
+.header__top__container__getintouch__item__account:hover {
+  background-image: url("../images/icons/tzm-icon-pink.svg");
 }
 
 .header__bottom {
@@ -151,6 +162,9 @@ h6 {
   border-radius: 0.4rem;
   cursor: pointer;
 }
+.header__bottom__container__column__button:hover {
+  background-color: #0A0A0A;
+}
 
 .header__bottom__container__column__logo__image {
   width: 9.2rem;
@@ -174,13 +188,22 @@ h6 {
 .services-search {
   background-image: url("../images/icons/search.svg");
 }
+.services-search:hover {
+  background-image: url("../images/icons/search-pink.svg");
+}
 
 .services-favourites {
   background-image: url("../images/icons/heart.svg");
 }
+.services-favourites:hover {
+  background-image: url("../images/icons/heart-pink.svg");
+}
 
 .services-cart {
   background-image: url("../images/icons/cart.svg");
+}
+.services-cart:hover {
+  background-image: url("../images/icons/cart-pink.svg");
 }
 
 .banner {
@@ -195,25 +218,17 @@ h6 {
   height: 100%;
   z-index: 1;
   display: flex;
-  transition-property: transform;
-  transform: translate3d(0, 0, 0);
-  transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
   box-sizing: content-box;
 }
 
 .banner__container__item {
   display: block;
   height: 45rem;
-  width: 100% !important;
+  width: 100%;
   background-size: cover !important;
   background-repeat: no-repeat !important;
   background-position-x: 50% !important;
-  flex-shrink: 0;
   position: relative;
-  transition-property: transform;
-  transform: translateZ(0);
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
 }
 
 .banner__nav_buttons {
@@ -284,8 +299,12 @@ h6 {
   background-color: #FF197A;
   color: #FAFAFA;
 }
+.button--pink:hover {
+  background-color: #0A0A0A;
+  color: #FAFAFA;
+}
 
-.banner__pagination {
+.banner__dots {
   bottom: 2rem !important;
   top: auto !important;
   left: 0 !important;
@@ -297,7 +316,7 @@ h6 {
   z-index: 10;
 }
 
-.banner__pagination__bullet {
+.banner__dots__item {
   display: inline-block;
   margin: 0 0.2rem;
   width: 0.6rem;
@@ -307,7 +326,7 @@ h6 {
   cursor: pointer;
 }
 
-.banner__pagination__bullet--active {
+.banner__dots__item.tns-nav-active {
   background-color: #FF197A;
 }
 
@@ -405,9 +424,196 @@ h6 {
 .suggestions__container__list {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   column-gap: 1rem;
+}
+
+.suggestions__container__list__item {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
+  width: 26.2rem;
+  background-color: #fff;
+  border-radius: 0.4rem;
+}
+
+.suggestions__container__list__item__images {
+  margin: 2.2rem 2.2rem 0;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  width: 23rem;
+  height: 23rem;
+  overflow-x: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.suggestions__container__list__item__images::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.suggestions__container__list__item__images__link {
+  display: block;
+  width: 23rem;
+  height: 23rem;
+}
+
+.suggestions__container__list__item__images__link__image {
+  max-width: unset;
+  width: 23rem;
+  height: 23rem;
+}
+
+.suggestions__container__list__item__dots {
+  display: flex;
+  justify-content: flex-start;
+  margin: 1rem 2.2rem 0;
+  height: 0.6rem;
+  gap: 0.4rem;
+}
+
+.suggestions__container__list__item__dots__item {
+  height: 0.6rem;
+  width: 0.6rem;
+  background-color: #DBDBDB;
+  cursor: pointer;
+}
+
+.suggestions__container__list__item__dots__item.tns-nav-active {
+  height: 0.6rem;
+  width: 0.6rem;
+  background-color: #FF197A;
+  cursor: pointer;
+}
+
+.suggestions__container__list__item__text {
+  margin: 0 2.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 2rem;
+  flex: 1 0 10rem;
+}
+
+.suggestions__container__list__item__text__title {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  width: 100%;
+}
+
+.suggestions__container__list__item__text__info {
+  display: flex;
+  height: 2.2rem;
+  justify-content: space-between;
+}
+
+.suggestions__container__list__item__text__info__prices {
+  display: flex;
+  gap: 0.4rem;
+  align-items: center;
+}
+
+.suggestions__container__list__item__text__info__prices__price {
+  font-size: 1.6rem;
+  line-height: 130%;
+  font-weight: 700;
+  color: #0A0A0A;
+}
+
+.suggestions__container__list__item__text__info__prices__oldprice {
+  font-size: 1.2rem;
+  line-height: 130%;
+  font-weight: 400;
+  color: #8A8A8A;
+  text-decoration: line-through;
+}
+
+.suggestions__container__list__item__text__info__label {
+  padding: 0.3rem 0.8rem;
+  background-color: #F5F5F5;
+  border-radius: 0.4rem;
+  color: #8A8A8A;
+  font-size: 1.2rem;
+  line-height: 130%;
+  font-weight: 400;
+}
+
+.suggestions__container__list__item__add_to_cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100%;
+  height: 5rem;
+  text-align: center;
+  align-content: center;
+  border-radius: 0 0 0.4rem 0.4rem;
+}
+.suggestions__container__list__item__add_to_cart:hover {
+  background-color: #FF197A;
+}
+.suggestions__container__list__item__add_to_cart:hover .suggestions__container__list__item__add_to_cart__text {
+  color: #FAFAFA;
+}
+.suggestions__container__list__item__add_to_cart:hover .suggestions__container__list__item__add_to_cart__icon {
+  background-image: url("../images/icons/cart-white.svg");
+}
+
+.suggestions__container__list__item__add_to_cart__text {
+  color: #FF197A;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.6rem;
+}
+
+.suggestions__container__list__item__add_to_cart__icon {
+  display: inline-block;
+  width: 1.6rem;
+  height: 1.6rem;
+  background-image: url("../images/icons/cart-pink.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 1.6rem 1.6rem;
+}
+
+.suggestions__container__list__item__add_to_favourites {
+  position: absolute;
+  display: block;
+  top: 1.6rem;
+  right: 1.6rem;
+  width: 1.6rem;
+  height: 1.6rem;
+  z-index: 10;
+  background-image: url("../images/icons/heart-grey.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.suggestions__container__list__item__add_to_favourites:hover {
+  background-image: url("../images/icons/heart-pink.svg");
+}
+
+.suggestions__container__list__item__add_to_favourites--added {
+  position: absolute;
+  display: block;
+  top: 1.6rem;
+  right: 1.6rem;
+  width: 1.6rem;
+  height: 1.6rem;
+  z-index: 10;
+  background-image: url("../images/icons/heart-pink-filled.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.suggestions__container__list__item__add_to_favourites--added:hover {
+  background-image: url("../images/icons/heart-grey.svg");
 }
 
 .sets {
