--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,9 +3,12 @@ $std-size: 1.6rem
 $black: #0A0A0A
 $black-light: #202020
 $grey: #B6B6B6
-$grey-light: #F5F5F5
+$grey1: #F5F5F5
+$grey2: #F0F0F0
+$grey3: #DBDBDB
+$grey-dark1: #B6B6B6
+$grey-dark2: #8A8A8A
 $grey-soft: #ECECEC
-$grey-bg: #DBDBDB
 $pink: #FF197A
 $white: #FAFAFA
 $yellow: #FFCF4B
@@ -28,6 +31,7 @@ body
   font-size: $std-size
   line-height: $std-size
   color: $black
+  background-color: $white
 
 h1, h2, h3, h4, h5, h6
   font-family: $font
@@ -63,7 +67,7 @@ h6
 
 .header__top
   background-color: $black-light
-  color: $grey-light
+  color: $grey1
 
 .header__top__container,
 .header__bottom__container,
@@ -94,7 +98,10 @@ h6
 .header__top__container__getintouch__item__phone, 
 .header__top__container__getintouch__item__account, 
 .header__services__list__item__link
-  color: $grey-light
+  color: $grey1
+
+  &:hover
+    color: $pink
 
 .header__top__menu__item__link, 
 .header__top__getintouch__item__city, 
@@ -115,6 +122,9 @@ h6
   background-position: left center
   background-repeat: no-repeat
   background-size: 1.6rem 1.6rem
+
+  &:hover
+    background-image: url("../images/icons/tzm-icon-pink.svg")
 
 .header__bottom
   background-color: $black
@@ -148,6 +158,10 @@ h6
   border-radius: 0.4rem
   cursor: pointer
 
+  &:hover
+    background-color: $black
+
+
 .header__bottom__container__column__logo__image
   width: 9.2rem
   height: 4.6rem
@@ -167,11 +181,20 @@ h6
 .services-search
   background-image: url("../images/icons/search.svg")
 
+  &:hover
+    background-image: url("../images/icons/search-pink.svg")
+
 .services-favourites
   background-image: url("../images/icons/heart.svg")
 
+  &:hover
+    background-image: url("../images/icons/heart-pink.svg")
+
 .services-cart
   background-image: url("../images/icons/cart.svg")
+
+  &:hover
+    background-image: url("../images/icons/cart-pink.svg")
 
 .banner
   position: relative
@@ -184,24 +207,24 @@ h6
   height: 100%
   z-index: 1
   display: flex
-  transition-property: transform
-  transform: translate3d(0, 0, 0)
-  transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial)
+  // transition-property: transform
+  // transform: translate3d(0, 0, 0)
+  // transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial)
   box-sizing: content-box
 
 .banner__container__item
   display: block
   height: 45rem
-  width: 100% !important
+  width: 100%
   background-size: cover !important
   background-repeat: no-repeat !important
   background-position-x: 50% !important
-  flex-shrink: 0
+  // flex-shrink: 0
   position: relative
-  transition-property: transform
-  transform: translateZ(0)
-  backface-visibility: hidden
-  -webkit-backface-visibility: hidden
+  // transition-property: transform
+  // transform: translateZ(0)
+  // backface-visibility: hidden
+  // -webkit-backface-visibility: hidden
 
 // .banner__container__item--active
 //   width: 100%
@@ -269,8 +292,12 @@ h6
 .button--pink
   background-color: $pink
   color: $white
+  
+  &:hover
+    background-color: $black
+    color: $white
 
-.banner__pagination
+.banner__dots
   bottom: 2rem !important
   top: auto !important
   left: 0 !important
@@ -281,16 +308,16 @@ h6
   transform: translate3d(0, 0, 0)
   z-index: 10
 
-.banner__pagination__bullet
+.banner__dots__item
   display: inline-block
   margin: 0 0.2rem
   width: 0.6rem
   height: 0.6rem
   border-radius: 0.04rem
-  background-color: $grey-bg
+  background-color: $grey3
   cursor: pointer
 
-.banner__pagination__bullet--active
+.banner__dots__item.tns-nav-active
   background-color: $pink
 
 .categories
@@ -305,7 +332,7 @@ h6
 .categories__tiles__item
   width: 26.2rem
   height: 34rem
-  background-color: $grey-light
+  background-color: $grey1
   border-radius: 0.4rem
   
 .categories__tiles__item__link
@@ -374,9 +401,177 @@ h6
 .suggestions__container__list
   display: flex
   flex-wrap: nowrap
-  justify-content: flex-start
-  align-items: center
+  align-items: stretch
   column-gap: 1rem
+
+.suggestions__container__list__item
+  position: relative
+  padding: 0
+  margin: 0
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  gap: 2rem
+  width: 26.2rem
+  background-color: #fff
+  border-radius: 0.4rem
+
+.suggestions__container__list__item__images
+  margin: 2.2rem 2.2rem 0
+  display: flex
+  flex-wrap: nowrap
+  justify-content: flex-start
+  width: 23rem
+  height: 23rem
+  overflow-x: auto
+  -ms-overflow-style: none
+  scrollbar-width: none
+
+  &::-webkit-scrollbar
+      width: 0
+      height: 0
+
+.suggestions__container__list__item__images__link
+  display: block
+  width: 23rem
+  height: 23rem
+
+.suggestions__container__list__item__images__link__image
+  max-width: unset
+  width: 23rem
+  height: 23rem
+
+.suggestions__container__list__item__dots
+  display: flex
+  justify-content: flex-start
+  margin: 1rem 2.2rem 0
+  height: 0.6rem
+  gap: 0.4rem
+
+.suggestions__container__list__item__dots__item
+  height: 0.6rem
+  width: 0.6rem
+  background-color: $grey3
+  cursor: pointer
+
+.suggestions__container__list__item__dots__item.tns-nav-active
+  height: 0.6rem
+  width: 0.6rem
+  background-color: $pink
+  cursor: pointer
+
+.suggestions__container__list__item__text
+  margin: 0 2.2rem
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  margin-top: 2rem
+  flex: 1 0 10rem
+  
+.suggestions__container__list__item__text__title
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 1.8rem
+  width: 100%
+
+.suggestions__container__list__item__text__info
+  display: flex
+  height: 2.2rem
+  justify-content: space-between
+
+.suggestions__container__list__item__text__info__prices
+  display: flex
+  gap: 0.4rem
+  align-items: center
+
+.suggestions__container__list__item__text__info__prices__price
+  font-size: 1.6rem
+  line-height: 130%
+  font-weight: 700
+  color: $black
+
+.suggestions__container__list__item__text__info__prices__oldprice
+  font-size: 1.2rem
+  line-height: 130%
+  font-weight: 400
+  color: $grey-dark2
+  text-decoration: line-through
+
+.suggestions__container__list__item__text__info__label
+  padding: 0.3rem 0.8rem
+  background-color: $grey1
+  border-radius: 0.4rem
+  color: $grey-dark2
+  font-size: 1.2rem
+  line-height: 130%
+  font-weight: 400
+
+.suggestions__container__list__item__add_to_cart
+  display: flex
+  justify-content: center
+  align-items: center
+  gap: 0.5rem
+  width: 100%
+  height: 5rem
+  text-align: center
+  align-content: center
+  border-radius: 0 0 0.4rem 0.4rem
+
+  &:hover
+    background-color: $pink
+
+  &:hover .suggestions__container__list__item__add_to_cart__text
+    color: $white
+    
+  &:hover .suggestions__container__list__item__add_to_cart__icon
+    background-image: url("../images/icons/cart-white.svg")
+
+.suggestions__container__list__item__add_to_cart__text
+  color: $pink
+  font-size: 1.6rem
+  font-weight: 500
+  line-height: 1.6rem
+
+.suggestions__container__list__item__add_to_cart__icon
+  display: inline-block
+  width: 1.6rem
+  height: 1.6rem
+  background-image: url("../images/icons/cart-pink.svg")
+  background-position: center center
+  background-repeat: no-repeat
+  background-size: 1.6rem 1.6rem
+
+.suggestions__container__list__item__add_to_favourites
+  position: absolute
+  display: block
+  top: 1.6rem
+  right: 1.6rem
+  width: 1.6rem
+  height: 1.6rem
+  z-index: 10
+  background-image: url("../images/icons/heart-grey.svg")
+  background-position: center center
+  background-repeat: no-repeat
+  background-size: cover
+
+  &:hover
+    background-image: url("../images/icons/heart-pink.svg")
+
+.suggestions__container__list__item__add_to_favourites--added
+  position: absolute
+  display: block
+  top: 1.6rem
+  right: 1.6rem
+  width: 1.6rem
+  height: 1.6rem
+  z-index: 10
+  background-image: url("../images/icons/heart-pink-filled.svg")
+  background-position: center center
+  background-repeat: no-repeat
+  background-size: cover
+
+  &:hover
+    background-image: url("../images/icons/heart-grey.svg")
 
 .sets
   margin-bottom: 6rem
@@ -426,7 +621,7 @@ h6
   gap: 1rem
   padding: 2rem
   text-align: center
-  background-color: $grey-light
+  background-color: $grey1
   border-radius: 0.4rem
 
 .utp__container__tile__image
