--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,10 @@ h6 {
   background-color: #F5F5F5;
   border-radius: 0.4rem;
 }
+.categories__tiles__item:hover {
+  background-image: url("../images/main-tiles/tile-bg-hover.svg");
+  color: #FAFAFA;
+}
 
 .categories__tiles__item__link {
   padding: 2rem;
@@ -376,8 +380,8 @@ h6 {
 }
 
 .brands {
-  margin: 0 auto;
-  padding: 6rem 0;
+  position: relative;
+  margin: 6rem auto;
   width: 100%;
   max-width: 135rem;
   overflow-x: auto;
@@ -387,6 +391,36 @@ h6 {
 .brands::-webkit-scrollbar {
   width: 0;
   height: 0;
+}
+.brands:hover .brands__nav_buttons__left, .brands:hover .brands__nav_buttons__right {
+  display: block;
+}
+
+.brands__nav_buttons {
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  z-index: 10;
+}
+
+.brands__nav_buttons__left {
+  display: none;
+  width: 4rem;
+  height: 4rem;
+  background-image: url("../images/icons/arrow-slider-left-grey.svg");
+  cursor: pointer;
+}
+
+.brands__nav_buttons__right {
+  display: none;
+  width: 4rem;
+  height: 4rem;
+  background-image: url("../images/icons/arrow-slider-right-grey.svg");
+  cursor: pointer;
 }
 
 .brands__list {
@@ -439,6 +473,9 @@ h6 {
   width: 26.2rem;
   background-color: #fff;
   border-radius: 0.4rem;
+}
+.suggestions__container__list__item:hover .suggestions__container__list__item__text__title {
+  color: #FF197A;
 }
 
 .suggestions__container__list__item__images {
@@ -553,7 +590,7 @@ h6 {
   height: 5rem;
   text-align: center;
   align-content: center;
-  border-radius: 0 0 0.4rem 0.4rem;
+  border-radius: 0.4rem;
 }
 .suggestions__container__list__item__add_to_cart:hover {
   background-color: #FF197A;
@@ -641,6 +678,12 @@ h6 {
   background-color: #ECECEC;
   border-radius: 0.4rem;
 }
+.sets__container__item:hover .sets__container__item__image {
+  display: none;
+}
+.sets__container__item:hover .sets__container__item__image--hover {
+  display: block;
+}
 
 .sets__container__item__title {
   position: absolute;
@@ -654,6 +697,10 @@ h6 {
 
 .sets__container__item__image {
   display: block;
+}
+
+.sets__container__item__image--hover {
+  display: none;
 }
 
 .utp {
@@ -725,7 +772,7 @@ h6 {
   flex-direction: column;
   flex-wrap: wrap;
   gap: 2rem;
-  opacity: 0.5;
+  opacity: 0.7;
   text-transform: uppercase;
 }
 
