--- a/sass/style.sass
+++ b/sass/style.sass
@@ -383,6 +383,7 @@ h6
 .brands__nav_buttons
   position: absolute
   top: 0
+  padding: 0 1rem
   display: flex
   align-items: center
   width: 100%
@@ -394,15 +395,23 @@ h6
   display: none
   width: 4rem
   height: 4rem
-  background-image: url('../images/icons/arrow-slider-left-grey.svg')
+  background-image: url('../images/icons/arrow-slider-left-black.svg')
   cursor: pointer
+  opacity: 0.5
+
+  &:hover
+    opacity: 1
 
 .brands__nav_buttons__right
   display: none
   width: 4rem
   height: 4rem
-  background-image: url('../images/icons/arrow-slider-right-grey.svg')
+  background-image: url('../images/icons/arrow-slider-right-black.svg')
   cursor: pointer
+  opacity: 0.5
+
+  &:hover
+    opacity: 1
 
 .brands__list
   display: flex
