--- a/css/style.css
+++ b/css/style.css
@@ -464,11 +464,62 @@ h6 {
   line-height: 2.6rem;
 }
 
+.suggestions__container {
+  position: relative;
+}
+.suggestions__container:hover .suggestions__container__nav_buttons__left, .suggestions__container:hover .suggestions__container__nav_buttons__right {
+  display: block;
+}
+
+.suggestions__container__nav_buttons {
+  position: absolute;
+  top: 0;
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.suggestions__container__nav_buttons__left {
+  display: none;
+  width: 4rem;
+  height: 4rem;
+  background-image: url("../images/icons/arrow-slider-left-black.svg");
+  cursor: pointer;
+  opacity: 0.5;
+  z-index: 10;
+}
+.suggestions__container__nav_buttons__left:hover {
+  opacity: 1;
+}
+
+.suggestions__container__nav_buttons__right {
+  display: none;
+  width: 4rem;
+  height: 4rem;
+  background-image: url("../images/icons/arrow-slider-right-black.svg");
+  cursor: pointer;
+  opacity: 0.5;
+  z-index: 10;
+}
+.suggestions__container__nav_buttons__right:hover {
+  opacity: 1;
+}
+
 .suggestions__container__list {
   display: flex;
+  position: relative;
   flex-wrap: nowrap;
   align-items: stretch;
   column-gap: 1rem;
+  overflow: hidden;
+  z-index: 1;
+}
+.suggestions__container__list::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
 .suggestions__container__list__item {
@@ -483,8 +534,10 @@ h6 {
   background-color: #fff;
   border-radius: 0.4rem;
 }
-.suggestions__container__list__item:hover .suggestions__container__list__item__text__title {
-  color: #FF197A;
+
+.suggestions__container .tns-item {
+  display: flex !important;
+  width: 26.2rem !important;
 }
 
 .suggestions__container__list__item__images {
@@ -551,6 +604,9 @@ h6 {
   font-weight: 500;
   line-height: 1.8rem;
   width: 100%;
+}
+.suggestions__container__list__item__text__title:hover {
+  color: #FF197A;
 }
 
 .suggestions__container__list__item__text__info {
