--- a/sass/style.sass
+++ b/sass/style.sass
@@ -440,11 +440,60 @@ h6
   font-weight: 700
   line-height: 2.6rem
 
+.suggestions__container
+  position: relative
+
+  &:hover .suggestions__container__nav_buttons__left, 
+  &:hover .suggestions__container__nav_buttons__right
+    display: block
+
+.suggestions__container__nav_buttons
+  position: absolute
+  top: 0
+  padding: 0 1rem
+  display: flex
+  align-items: center
+  width: 100%
+  height: 100%
+  justify-content: space-between
+  
+
+.suggestions__container__nav_buttons__left
+  display: none
+  width: 4rem
+  height: 4rem
+  background-image: url('../images/icons/arrow-slider-left-black.svg')
+  cursor: pointer
+  opacity: 0.5
+  z-index: 10
+
+  &:hover
+    opacity: 1
+
+.suggestions__container__nav_buttons__right
+  display: none
+  width: 4rem
+  height: 4rem
+  background-image: url('../images/icons/arrow-slider-right-black.svg')
+  cursor: pointer
+  opacity: 0.5
+  z-index: 10
+
+  &:hover
+    opacity: 1
+
 .suggestions__container__list
   display: flex
+  position: relative
   flex-wrap: nowrap
   align-items: stretch
   column-gap: 1rem
+  overflow: hidden
+  z-index: 1
+
+  &::-webkit-scrollbar
+      width: 0
+      height: 0
 
 .suggestions__container__list__item
   position: relative
@@ -458,8 +507,9 @@ h6
   background-color: #fff
   border-radius: 0.4rem
 
-  &:hover .suggestions__container__list__item__text__title
-    color: $pink
+.suggestions__container .tns-item
+  display: flex !important
+  width: 26.2rem !important
 
 .suggestions__container__list__item__images
   margin: 2.2rem 2.2rem 0
@@ -518,6 +568,9 @@ h6
   font-weight: 500
   line-height: 1.8rem
   width: 100%
+
+  &:hover
+    color: $pink
 
 .suggestions__container__list__item__text__info
   display: flex
