--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,6 +30,7 @@ html
 
 body
   width: 100%
+  min-width: 39.3rem
   margin: 0 auto
   font-family: $font
   font-weight: 400
@@ -393,7 +394,7 @@ h6
   background-color: $grey3
   cursor: pointer
 
-.banner__dots__item.tns-nav-active
+.banner__dots__item.tns-nav-active, .banner__dots__item.is-active
   background-color: $pink
 
 .categories
@@ -515,7 +516,7 @@ h6
 .brands__nav_buttons
   position: absolute
   top: 0
-  padding: 0 1rem
+  padding: 0 4rem 0 1rem
   display: flex
   align-items: center
   width: 100%
@@ -568,15 +569,34 @@ h6
   width: auto
   max-width: unset
 
+.splide__list
+  column-gap: 0 !important
+
 .suggestions
   margin-bottom: 6rem
-
+  
+//test start
 .suggestions__container
+  // position: relative
   position: relative
+  margin: 6rem auto
+  width: 100%
+  max-width: 138rem
+  overflow-x: auto
+  -ms-overflow-style: none
+  scrollbar-width: none
+
+  &::-webkit-scrollbar
+      width: 0
+      height: 0
 
   &:hover .suggestions__container__nav_buttons__left, 
   &:hover .suggestions__container__nav_buttons__right
     display: block
+
+  @media screen and (max-width: $mobile)
+    margin: 4rem auto
+//test end
 
 .suggestions__container__heading
   display: block
@@ -625,14 +645,16 @@ h6
     opacity: 1
 
 .suggestions__container__list
-  // padding: 1.5rem
   display: flex
   position: relative
   flex-wrap: nowrap
-  align-items: stretch
-  column-gap: 1rem
+  // align-items: stretch
+  // column-gap: 1rem
   overflow: hidden
   z-index: 1
+  justify-content: flex-start
+  align-items: center
+
 
   &::-webkit-scrollbar
       width: 0
@@ -646,13 +668,15 @@ h6
   flex-direction: column
   justify-content: space-between
   gap: 2rem
-  width: 26.2rem
+  // width: auto
+  min-width: 25.2rem
   background-color: #fff
+  background-clip: content-box
   border-radius: 0.4rem
 
 .suggestions__container .tns-item
   display: flex !important
-  width: 26.2rem !important
+  // width: 26.2rem !important
 
 .suggestions__container__list__item__images
   margin: 2.2rem 2.2rem 0
@@ -839,6 +863,7 @@ h6
 
 .sets__container__item
   display: block
+  width: 100%
   position: relative
   background-color: $grey-soft
   border-radius: 0.4rem
@@ -849,7 +874,8 @@ h6
 
   &:hover .sets__container__item__image--hover
     display: block
-
+    width: 100%
+    
 .sets__container__item__title
   position: absolute
   display: block
