Рефакторинг классов, оптимизация каруселей

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,102 +1,1 @@
-/* line 1, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-* {
-  padding: 0px;
-  margin: 0px;
-  border: none;
-  box-sizing: border-box;
-}
-
-/* line 7, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-*::before, *::after {
-  box-sizing: border-box;
-}
-
-/* line 10, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* line 14, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-a:link, a:visited, a:hover {
-  text-decoration: none;
-}
-
-/* line 17, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-aside, nav, footer, header, section, main {
-  display: block;
-}
-
-/* line 20, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol, li {
-  font-size: inherit;
-  font-weight: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-/* line 26, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-ul, ul li {
-  list-style: none;
-}
-
-/* line 29, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-img {
-  vertical-align: top;
-  max-width: 100%;
-  height: auto;
-}
-
-/* line 34, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-svg {
-  max-width: 100%;
-  height: auto;
-}
-
-/* line 38, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-textarea, select {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
-}
-
-/* line 44, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-input, button {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
-}
-
-/* line 50, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-input::-ms-clear, button::-ms-clear {
-  display: none;
-}
-
-/* line 53, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-input:focus, input:active, button:focus, button:active {
-  outline: none;
-}
-
-/* line 56, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-input::-moz-focus-inner, button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-/* line 60, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-button, input[type="submit"] {
-  display: inline-block;
-  box-shadow: none;
-  background-color: transparent;
-  background: none;
-  cursor: pointer;
-}
-
-/* line 67, ../../../../../Users/eugene/git_projects/retzm/sass/reset.sass */
-label {
-  cursor: pointer;
-}
-
-/*# sourceMappingURL=reset.css.map */
+*{padding:0px;margin:0px;border:none;box-sizing:border-box}*::before,*::after{box-sizing:border-box}a{text-decoration:none;color:inherit}a:link,a:visited,a:hover{text-decoration:none}aside,nav,footer,header,section,main{display:block}h1,h2,h3,h4,h5,h6,p,blockquote,ul,ol,li{font-size:inherit;font-weight:inherit;margin:0;padding:0}ul,ul li{list-style:none}img{vertical-align:top;max-width:100%;height:auto}svg{max-width:100%;height:auto}textarea,select{font-family:inherit;font-size:inherit;color:inherit;background-color:transparent}input,button{font-family:inherit;font-size:inherit;color:inherit;background-color:transparent}input::-ms-clear,button::-ms-clear{display:none}input:focus,input:active,button:focus,button:active{outline:none}input::-moz-focus-inner,button::-moz-focus-inner{padding:0;border:0}button,input[type="submit"]{display:inline-block;box-shadow:none;background-color:transparent;background:none;cursor:pointer}label{cursor:pointer}
