--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1413,7 +1413,7 @@ h6, .h6
   @media screen and (max-width: $tablet)
     grid-column: span 2
 
-.delivery_teaser
+.delivery_teaser, .pickup_teaser
   margin-bottom: 4rem
   display: flex
   gap: 1rem
@@ -1422,13 +1422,12 @@ h6, .h6
   @media screen and (max-width: $tablet)
     flex-direction: column
 
-.delivery_teaser__banner
+.delivery_teaser__banner, .pickup_teaser__banner
   padding: 11.25rem 4rem
   display: flex
   flex-direction: column
   gap: 4rem
   width: -webkit-fill-available
-  background-image: url('../images/contacts/delivery_teaser_bg.jpg')
   background-repeat: no-repeat
   background-size: cover
   border-radius: $radius
@@ -1439,15 +1438,31 @@ h6, .h6
     height: 31.4rem
     gap: 2rem
     font-size: 2.8rem
-    background-image: url('../images/contacts/delivery_teaser_bg_mobile.jpg')
 
-.delivery_teaser__banner__heading
-  max-width: 45rem
+.delivery_teaser__banner
+  background-image: url('../images/delivery/delivery_bg.svg')
+
+  @media screen and (max-width: $tablet)
+    background-image: url('../images/delivery/delivery_bg-mobile.svg')
+
+.delivery_teaser__banner__heading, .pickup_teaser__banner__heading
   display: inline-block
+  font-size: 4rem
+  line-height: 110%
   font-weight: 700
   color: $white
 
-.delivery_teaser__courier
+  @media screen and (max-width: $tablet)
+    font-size: 2.8rem
+    line-height: 130%
+
+.delivery_teaser__banner__heading
+  max-width: 45rem
+
+.pickup_teaser__banner__heading
+  max-width: 59rem
+
+.delivery_teaser__courier, .pickup_teaser__packing
   max-width: 39.8rem
   border-radius: $radius
   overflow: hidden
@@ -1456,6 +1471,13 @@ h6, .h6
     max-width: 100%
     height: 41rem
     object-fit: cover
+
+.pickup_teaser__banner
+  background-image: url('../images/delivery/pickup_bg.svg')
+
+  @media screen and (max-width: $tablet)
+    background-image: url('../images/delivery/pickup_bg-mobile.svg')
+
 /* Contacts&Pickup end */
 /* Guarantee start */
 .guarantee
